--- a/testing/climap.html
+++ b/testing/climap.html
@@ -17,6 +17,9 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin=""></script>
+    <script src="L.Map.Sync.js"></script>
+    <!-- <script src="https://unpkg.com/leaflet-transparency@latest/leaflet-transparency.js"></script> -->
+    <script src="leaflet-transparancy.js"></script>
 </head>
 
 <body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="77">
@@ -32,8 +35,25 @@
         </div>
     </nav>
     <div class="carousel slide flex-shrink-1" data-bs-ride="carousel" data-bs-pause="false" id="carousel-1">
-        <div id="map"></div>
-        <script src="assets/js/map.js"></script>
+        <div id="main-page-content">
+            <!-- <div cass="layered">
+                <div>
+                    <div id="map"></div>
+                    <div id="pop-map"></div>
+                </div>
+            </div> -->
+            <!-- <div id="map"></div>
+            <div id="pop-map"></div> -->
+            <div id="map-container">
+                <div id="map"></div>
+                <div id="pop-map"></div>
+            </div>
+            <div class="slidecontainer">
+                <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+                <h9 id="demo"></h9>
+            </div>
+            <script src="assets/js/map.js"></script>
+        </div>
         <div class="carousel-inner">
             <div class="carousel-item active fitim"><img class="w-100 d-block" src="assets/img/scaled-lanscape-background.png" alt="Slide Image"></div>
             <div class="carousel-item fitim"><img class="w-100 d-block" src="assets/img/intro-bg.jpg" alt="Slide Image"></div>
