--- a/testing/climap.html
+++ b/testing/climap.html
@@ -20,6 +20,7 @@
     <script src="L.Map.Sync.js"></script>
     <!-- <script src="https://unpkg.com/leaflet-transparency@latest/leaflet-transparency.js"></script> -->
     <script src="leaflet-transparancy.js"></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 
 <body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="77">
